--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.quizmegame" >
+    package="com.example.quizmegame">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Quiz_me" >
+        android:theme="@style/Theme.Quiz_me">
+        <activity
+            android:name=".SurvivalStartingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GameLobby"
+            android:exported="false" />
         <activity
             android:name=".QuizResults"
             android:exported="false" />
@@ -40,7 +46,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
